<resources>
    <string name="app_name">StarMart</string>
    <string name="title_activity_home">StarMart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Star Mart</string>
    <string name="nav_header_subtitle">android.Wonder@StarMart.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Account</string>
    <string name="menu_gallery">Notificaton</string>

    <string name="menu_addshops">Add Shops</string>
    <string name="menu_additems">Add items</string>
    <string name="menu_share">Location</string>
    <string name="menu_send">Contact US</string>
    <string name="user_Comment">Im really enjoy the food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home__maps">Map</string>
    <string name="title_activity_home__map">Map</string>
    <string name="yasiru_priyadarshana">Yasiru Priyadarshana</string>
    <string name="desc">A product description is the marketing copy used to describe a product\'s value proposition to potential customers. A compelling product description provides customers with details around features</string>


    <string name="category">Categories</string>
    <string name="name">Category Name</string>
    <string name="photo">Add Image</string>
    <string name="add1">Add Category</string>
    <string name="add2">Add Item</string>
    <string name="admin">Admin Page</string>

</resources>
